--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,10 +1,13 @@
-<div class="row">
+---
+title: Home
+---
+<!--<div class="row">
   <div class="large-12 columns">
     <h1>Neighborhood Pub Crawl</h1>
   </div>
-</div> 
+</div> -->
 
-<div class="row">
+<!--<div class="row">
   <div class="large-12 columns">
     <div class="callout alert">
       <h3>This site is currently under construction.</h3>
@@ -12,4 +15,4 @@
       <p><img src="http://i.giphy.com/BWgW6a3XhuT6M.gif" alt="soon"></p>
     </div>
   </div>
-</div>
+</div>-->
