WIP - convert images to SVG's - improve l33t mode - add dummy pages

--- a/src/pages/history.html
+++ b/src/pages/history.html
@@ -1,5 +1,5 @@
 ---
-title: About
+title: History
 ---
 <div class="row">
     <div class="small-9 columns">
@@ -13,6 +13,6 @@ title: About
             <br /> The Founding Fathers</p>
     </div>
     <div class="small-3 columns">
-        <img src="{{ root }}assets/img/founding-fathers.png" alt="The Founding Fathers" title="The Founding Fathers" />
+        <img class="{{ global.cssPrefix }}__foundingFathers" src="{{ root }}assets/img/founding-fathers.png" alt="The Founding Fathers" title="The Founding Fathers" />
     </div>
 </div>
