--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,18 +1,45 @@
 ---
 title: Home
 ---
-<!--<div class="row">
-  <div class="large-12 columns">
-    <h1>Neighborhood Pub Crawl</h1>
-  </div>
-</div> -->
-
-<!--<div class="row">
-  <div class="large-12 columns">
-    <div class="callout alert">
-      <h3>This site is currently under construction.</h3>
-      <p>Please check back again soon.</p>
-      <p><img src="http://i.giphy.com/BWgW6a3XhuT6M.gif" alt="soon"></p>
+<div class="row">
+    <div class="{{ global.cssPrefix }}__flickity-gallery small-12 columns">
+        {{> gallery2014 }}
     </div>
-  </div>
-</div>-->
+</div>
+<div class="row {{ global.cssPrefix }}__features">
+    <div class="small-12 large-6 columns">
+        <div class="row">
+            <div class="small-12 medium-6 columns {{ global.cssPrefix }}__feature">
+                <h2>When?</h2>
+                <h3>{{ dateFormat global.eventDate 'MM/DD/YYYY h:mm A' }}</h3>
+            </div>
+            <div class="small-12 medium-6 columns {{ global.cssPrefix }}__feature">
+                <h2>Where?</h2>
+                <h3>Mary's Place</h3>
+                <p><a href="https://goo.gl/maps/3s9PCiR9ySz" target="_blank" title="View on map">6300 N. Milwaukee Ave</a></p>
+            </div>
+        </div>
+    </div>
+    <div class="small-12 large-6 columns">
+        <div class="row">
+            <div class="small-12 medium-6 columns {{ global.cssPrefix }}__feature">
+                <h2>How soon?</h2>
+                <p id="countdown">
+                </p>
+            </div>
+            <div class="small-12 medium-6 columns {{ global.cssPrefix }}__feature">
+                <h2>Want updates?</h2>
+                <input type="text" placeholder="Name">
+                <input type="text" placeholder="Email">
+                <button type="button" class="button">Submit</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script type="text/javascript">
+    window.schrags = {
+        "global": {
+            "eventDate": "{{ global.eventDate }}"
+        }
+    };
+</script>
