add registered crawlers

--- a/whospounding.html
+++ b/whospounding.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>History | Neighborhood Pub Crawl</title>
+    <title>Who&#x27;s Pounding? | Neighborhood Pub Crawl</title>
     <link type="image/x-icon" href="assets/img/favicon.ico">
     <link rel="stylesheet" href="assets/css/app.css">
   </head>
@@ -35,10 +35,10 @@
                 <div class="small-12 columns">
                     <nav class="npc__navMain">
                         <ul class="menu vertical medium-horizontal">
-                            <li class="selected"><a href="/history.html">History</a></li>
+                            <li ><a href="/history.html">History</a></li>
                             <li ><a href="/bars.html">The Bars</a></li>
                             <li ><a href="/signup.html">Sign Up</a></li>
-                            <li ><a href="/whospounding.html">Who's Pounding?</a></li>
+                            <li class="selected"><a href="/whospounding.html">Who's Pounding?</a></li>
                             <!--<li class="npc__askCheesy "><a href="/askcheesy.html">Ask Cheesy</a>
                                 <div class="npc__cheesySurprise"></div>
                             </li>
@@ -50,18 +50,18 @@
         </header>
         
         <div class="row">
-            <div class="small-9 columns">
-                <h3>Pub Crawl History</h3>
-                <p>It began in 2003 as a small journey among close friends and has blossomed over the years to become the defining event of the summer.</p>
-                <p>The Neighborhood Pub Crawl features two zip codes of one of a kind destinations. We've got limited edition custom t-shirts, gaming, food, a house band, raffles, romance, marriages, babies, a dancy party, Captain Fun, the Chalice of Valor...you get the point.</p>
-                <p>The core mission of our journey is brigning good people together into the historic melting pot that is Milwaukee Avenue and Chicago's Northwest side. We honor this legendary artery with our pilmigrage every August.</p>
-                <p>Our quest offers a chance for friends old and new to unwind, connect, share a Żywiec, and re-discover why they actually became friends in the first place.</p>
-                <p>Come one, come all. Invite your friends, invite your friend's friends - invite a total stranger. All are welcome. The people are what make this event great. We look forward to seeing who comes out every year.</p>
-                <p>Thank you,
-                    <br /> The Founding Fathers</p>
-            </div>
-            <div class="small-3 columns">
-                <img class="npc__foundingFathers" src="assets/img/founding-fathers.png" alt="The Founding Fathers" title="The Founding Fathers" />
+            <div class="small-12 columns">
+                <h3>Registered Crawlers</h3>
+                <ol>
+                    <li>Matt Schragal</li>
+                    <li>Lucy Raymond</li>
+                    <li>Tim Redmond</li>
+                    <li>Angie Kang</li>
+                    <li>Tony Maguire</li>
+                    <li>Joy Kolb</li>
+                    <li>Alex Hayashi</li>
+                    <li>Katie Wolf</li>
+                </ol>
             </div>
         </div>
         
