--- a/askcheesy.html
+++ b/askcheesy.html
@@ -38,6 +38,7 @@
                             <li ><a href="/history.html">History</a></li>
                             <li ><a href="/bars.html">The Bars</a></li>
                             <li ><a href="/signup.html">Sign Up</a></li>
+                            <li ><a href="/whospounding.html">Who's Pounding?</a></li>
                             <!--<li class="npc__askCheesy selected"><a href="/askcheesy.html">Ask Cheesy</a>
                                 <div class="npc__cheesySurprise"></div>
                             </li>
