--- a/whospounding.html
+++ b/whospounding.html
@@ -61,6 +61,8 @@
                     <li>Joy Kolb</li>
                     <li>Alex Hayashi</li>
                     <li>Katie Wolf</li>
+                    <li>Molly Warner</li>
+                    <li>Tim Gavin</li>
                 </ol>
             </div>
         </div>
