--- a/whospounding.html
+++ b/whospounding.html
@@ -63,6 +63,7 @@
                     <li>Katie Wolf</li>
                     <li>Molly Warner</li>
                     <li>Tim Gavin</li>
+                    <li>Jason Mielcarek</li>
                 </ol>
             </div>
         </div>
