--- a/whospounding.html
+++ b/whospounding.html
@@ -64,6 +64,10 @@
                     <li>Molly Warner</li>
                     <li>Tim Gavin</li>
                     <li>Jason Mielcarek</li>
+                    <li>Amanda Pantle</li>
+                    <li>Daniel Mercadante</li>
+                    <li>Andi Lenahan</li>
+                    <li>Mihai Sturdza</li>
                 </ol>
             </div>
         </div>
