--- a/whospounding.html
+++ b/whospounding.html
@@ -55,6 +55,7 @@
                 <ol>
                     <li>Matt Schragal</li>
                     <li>Lucy Raymond</li>
+                    <li>Billy Gavin</li>
                     <li>Tim Redmond</li>
                     <li>Angie Kang</li>
                     <li>Tony Maguire</li>
