--- a/whospounding.html
+++ b/whospounding.html
@@ -66,6 +66,7 @@
                     <li>Tim Gavin</li>
                     <li>Jason Mielcarek</li>
                     <li>Amanda Pantle</li>
+                    <li>Amanda Pantle Guest</li>
                     <li>Daniel Mercadante</li>
                     <li>Andi Lenahan</li>
                     <li>Mihai Sturdza</li>
