--- a/whospounding.html
+++ b/whospounding.html
@@ -70,6 +70,20 @@
                     <li>Daniel Mercadante</li>
                     <li>Andi Lenahan</li>
                     <li>Mihai Sturdza</li>
+                    <li>Ali Fleming</li>
+                    <li>Natalie Mazza</li>
+                    <li>Natalie Mazza Guest</li>
+                    <li>Natalie Mazza Guest</li>
+                    <li>Natalie Mazza Guest</li>
+                    <li>Kevin Coyne</li>
+                    <li>Dan Klimas</li>
+                    <li>Kristin Klimas</li>
+                    <li>Aaron Kohlhepp</li>
+                    <li>Dave Weber</li>
+                    <li>Ryan Walsh</li>
+                    <li>Stacie Grodek</li>
+                    <li>Tim Grodek</li>
+                    <li>Denis Walsh</li>
                 </ol>
             </div>
         </div>
