--- a/whospounding.html
+++ b/whospounding.html
@@ -84,6 +84,8 @@
                     <li>Stacie Grodek</li>
                     <li>Tim Grodek</li>
                     <li>Denis Walsh</li>
+                    <li>Colin Monnier</li>
+                    <li>Daniel Moran</li>
                 </ol>
             </div>
         </div>
