--- a/whospounding.html
+++ b/whospounding.html
@@ -86,6 +86,11 @@
                     <li>Denis Walsh</li>
                     <li>Colin Monnier</li>
                     <li>Daniel Moran</li>
+                    <li>Jacob Nelson</li>
+                    <li>Maggie Ritter</li>
+                    <li>Beth Wethole</li>
+                    <li>Brett Nosehair</li>
+                    <li>Brett Nosehair Guest</li>
                 </ol>
             </div>
         </div>
