--- a/whospounding.html
+++ b/whospounding.html
@@ -91,6 +91,11 @@
                     <li>Beth Wethole</li>
                     <li>Brett Nosehair</li>
                     <li>Brett Nosehair Guest</li>
+                    <li>Michael Johnson (The Mayor)</li>
+                    <li>Kristy Johnson (The Mayor's Wife)</li>
+                    <li>John White</li>
+                    <li>John White Guest</li>
+                    <li>Gina Scarpetta</li>
                 </ol>
             </div>
         </div>
