--- a/whospounding.html
+++ b/whospounding.html
@@ -96,6 +96,12 @@
                     <li>John White</li>
                     <li>John White Guest</li>
                     <li>Gina Scarpetta</li>
+                    <li>Fiona Lowry</li>
+                    <li>Stephen Hogan</li>
+                    <li>Melissa Gillham</li>
+                    <li>Brian Gillham</li>
+                    <li>Carrie North</li>
+                    <li>Matthew Salciccioli</li>
                 </ol>
             </div>
         </div>
