--- a/whospounding.html
+++ b/whospounding.html
@@ -102,6 +102,7 @@
                     <li>Brian Gillham</li>
                     <li>Carrie North</li>
                     <li>Matthew Salciccioli</li>
+                    <li>Alexandra Ochsner</li>
                 </ol>
             </div>
         </div>
