--- a/whospounding.html
+++ b/whospounding.html
@@ -50,6 +50,7 @@
         </header>
         
         <div class="row">
+
             <div class="small-12 columns">
                 <h3>Registered Crawlers</h3>
                 <ol>
@@ -103,6 +104,23 @@
                     <li>Carrie North</li>
                     <li>Matthew Salciccioli</li>
                     <li>Alexandra Ochsner</li>
+                    <li>Pat Cavanaugh</li>
+                    <li>Jill O'Malley</li>
+                    <li>Claire Moore</li>
+                    <li>William Taege</li>
+                    <li>Brenda Beben</li>
+                    <li>Christine Mulroney</li>
+                    <li>Brian DiDuca</li>
+                    <li>Adam Metzger</li>
+                    <li>Brianna Bogan</li>
+                    <li>Brianna Bogan Guest</li>
+                    <li>Stephanie Nimmo</li>
+                    <li>Bob Nimmo</li>
+                    <li>Alex Moser</li>
+                    <li>Rachel Burke</li>
+                    <li>Billy Fletcher</li>
+                    <li>Kert Evans</li>
+                    <li>Kert Evans Guest</li>
                 </ol>
             </div>
         </div>
