--- a/whospounding.html
+++ b/whospounding.html
@@ -121,6 +121,28 @@
                     <li>Billy Fletcher</li>
                     <li>Kert Evans</li>
                     <li>Kert Evans Guest</li>
+                    <li>Matt McDonad</li>
+                    <li>Falshunnee Bradford</li>
+                    <li>Steve DiDuca</li>
+                    <li>Lisa DiDuca</li>
+                    <li>Kris Kuznicki</li>
+                    <li>Patrick Palmieri</li>
+                    <li>Morgan Riegert</li>
+                    <li>John White</li>
+                    <li>Jim Murphy</li>
+                    <li>Eddie Diazmunoz</li>
+                    <li>Dan Bacarella</li>
+                    <li>Jason Gillham</li>
+                    <li>Jason Gillham Guest</li>
+                    <li>Stephanie Florey</li>
+                    <li>Katelyn Theis</li>
+                    <li>Matthew Taege</li>
+                    <li>Sanjay Gidwani</li>
+                    <li>Raymond Clark</li>
+                    <li>Drew Cekowski</li>
+                    <li>Nat Winters</li>
+                    <li>Jessie Chapman</li>
+                    <li>Kimberly Bugos</li>
                 </ol>
             </div>
         </div>
