--- a/whospounding.html
+++ b/whospounding.html
@@ -133,7 +133,7 @@
                     <li>Eddie Diazmunoz</li>
                     <li>Dan Bacarella</li>
                     <li>Jason Gillham</li>
-                    <li>Jason Gillham Guest</li>
+                    <li>Amarelis Morales</li>
                     <li>Stephanie Florey</li>
                     <li>Katelyn Theis</li>
                     <li>Matthew Taege</li>
@@ -143,6 +143,7 @@
                     <li>Nat Winters</li>
                     <li>Jessie Chapman</li>
                     <li>Kimberly Bugos</li>
+                    <li>Ryan Martin</li>
                 </ol>
             </div>
         </div>
