--- a/signup.html
+++ b/signup.html
@@ -72,7 +72,7 @@
                 <!--<h3>Registration <strong>MUST</strong> be completed by <strong>July 17th, 2017</strong>.</h3>-->
                 <!--<p>It's pretty easy. Select your desired size, click Pay Now, then follow the instructions.</p>
                 <p>If you do it right you should receive an e-mail confirmation and that's it, you're done. It's really that simple.</p>-->
-                <h4>Register by July 17th, 2017</h4>
+                <!-- <h4>Register by July 17th, 2017</h4>
                 <p><strong>Registration can only be done in advance.</strong> <strong>Shirts will not be sold on crawl day.</strong></p>
                 <p>You Can Pay via Venmo or PayPal. Venmo is preferred.</p>
                 <div class="method">
@@ -107,7 +107,7 @@
                         <img src="assets/img/paypal_logo.png" alt="Pay via PayPal">
                     </a>
                 </div>
-            </div>
+            </div> -->
         </div>
         
     </div>
