--- a/whospounding.html
+++ b/whospounding.html
@@ -144,6 +144,7 @@
                     <li>Jessie Chapman</li>
                     <li>Kimberly Bugos</li>
                     <li>Ryan Martin</li>
+                    <li>Nick Staton</li>
                 </ol>
             </div>
         </div>
