--- a/signup.html
+++ b/signup.html
@@ -51,22 +51,25 @@
         
         <div class="row">
             <div class="small-12 medium-8 columns">
-                <h3>What Does Registration Get Me?</h3>
-                <p>Most importantly, the official Neighborhood Pub Crawl T-Shirt. These puppies are limited edition, custom designed, soft as hell, and built for comfort. Coveted stuff. As always, the artwork will remain secret until crawl day.</p>
+                <!-- <h3>What Does Registration Get Me?</h3> -->
+                <h3>Registration is now closed.</h3>
+                <p>Check back soon for potential overflow sales...</p>
+                <!-- <p>Most importantly, the official Neighborhood Pub Crawl T-Shirt. These puppies are limited edition, custom designed, soft as hell, and built for comfort. Coveted stuff. As always, the artwork will remain secret until crawl day.</p>
                 <p>In addition to that, you get food during our stop at Three Counties. Papa Joe's Pizza, a neighborhood favorite, provides their legendary pie for our mouths.</p>
                 <p>But wait, there's more...you get a shot at winning the Golden Ticket and are automatically entered into our one of a kind Neighborhood Pub Crawl Raffle.</p>
                 <p>Registration fees also help cover the extensive Rider requests of the infamous HOYHIMSFY green room as well as keep Captain Fun funded and on the lookout to please.</p>
-                <p>All proceeds go back into the event. I make no profit.</p>
+                <p>All proceeds go back into the event. I make no profit.</p> -->
                 <!--<div class="callout primary">
                     <p><strong>Registration can only be done in advance.</strong> <strong>Shirts will not be sold on crawl day.</strong></p>
                     <p><strong>Registration must be completed by July 17th, 2017</strong></p>
                 </div>-->
-                <p>Shirts are picked up at the first bar, Mary's Place. I will not be carrying the backpack of shirts around this year like a dope. If you want yours, get to the first bar on time. Don't blow it.</p>
+                <!-- <p>Shirts are picked up at the first bar, Mary's Place. I will not be carrying the backpack of shirts around this year like a dope. If you want yours, get to the first bar on time. Don't blow it.</p>
                 <h4>How Much?</h4>
                 <p><strong>The cost of registration is $30</strong>. Well worth it for the souvenir and experience of a lifetime.</p>
                 <p>Registration can be completed via <strong>Venmo</strong> or <strong>PayPal</strong>.</p>
                 <h4>Why So Early?</h4>
-                <p>It takes time to ship &amp; print our badass shirts. We appreciate your cooperation.</p>
+                <p>It takes time to ship &amp; print our badass shirts. We appreciate your cooperation.</p> -->
+                
             </div>
             <div class="small-12 medium-4 columns">
                 <!--<h3>Registration <strong>MUST</strong> be completed by <strong>July 17th, 2017</strong>.</h3>-->
