--- a/whospounding.html
+++ b/whospounding.html
@@ -145,6 +145,11 @@
                     <li>Kimberly Bugos</li>
                     <li>Ryan Martin</li>
                     <li>Nick Staton</li>
+                    <li>Ben Pfister</li>
+                    <li>Natalie Madsen</li>
+                    <li>Matthew Cavanaugh</li>
+                    <li>Dave Hess</li>
+                    <li>Joe Kelly</li>
                 </ol>
             </div>
         </div>
