--- a/signup.html
+++ b/signup.html
@@ -53,7 +53,10 @@
             <div class="small-12 medium-8 columns">
                 <!-- <h3>What Does Registration Get Me?</h3> -->
                 <h3>Registration is now closed.</h3>
-                <p>Check back soon for potential overflow sales...</p>
+              
+                <!-- <p>Check back soon for potential overflow sales...</p> -->
+                <p>I have extra shirts available. Email me at matthew.schragal@live.com to claim one. First come first serve.</p>
+                <p>Small: 8, Medium: 12, Large: 10, XL: 4</p>
                 <!-- <p>Most importantly, the official Neighborhood Pub Crawl T-Shirt. These puppies are limited edition, custom designed, soft as hell, and built for comfort. Coveted stuff. As always, the artwork will remain secret until crawl day.</p>
                 <p>In addition to that, you get food during our stop at Three Counties. Papa Joe's Pizza, a neighborhood favorite, provides their legendary pie for our mouths.</p>
                 <p>But wait, there's more...you get a shot at winning the Golden Ticket and are automatically entered into our one of a kind Neighborhood Pub Crawl Raffle.</p>
