Update for 2018 crawl

--- a/src/pages/whospounding.html
+++ b/src/pages/whospounding.html
@@ -7,12 +7,8 @@ title: Who's Pounding?
         <ol>
             <li>Matt Schragal</li>
             <li>Lucy Raymond</li>
-            <li>Tim Redmond</li>
-            <li>Angie Kang</li>
-            <li>Tony Maguire</li>
-            <li>Joy Kolb</li>
-            <li>Alex Hayashi</li>
-            <li>Katie Wolf</li>
+            <li>Billy Gavin</li>
+
         </ol>
     </div>
 </div>
