--- a/bars.html
+++ b/bars.html
@@ -26,8 +26,8 @@
                 </div>
                 <div class="small-12 medium-6 columns">
                     <div class="npc__eventInfo">
-                        <span class="npc__annual">15th Annual Neighborhood Pub Crawl</span>
-                        <span class="npc__eventDate">August 12th, 2017</span>
+                        <span class="npc__annual">16th Annual Neighborhood Pub Crawl</span>
+                        <span class="npc__eventDate">August 25th, 2018</span>
                     </div>
                 </div>
             </div>
@@ -42,13 +42,11 @@
                             <!--<li class="npc__askCheesy "><a href="/askcheesy.html">Ask Cheesy</a>
                                 <div class="npc__cheesySurprise"></div>
                             </li>
-                            <li ><a href="/gallery.html">Gallery</a></li>-->
-                        </ul>
+                            <li ><a href="/gallery.html">Gallery</a></li>-->                </ul>
                     </nav>
                 </div>
             </div>
         </header>
-        
         <div class="row">
             <div class="small-12 columns">
                     <div class="npc__bar">
@@ -145,7 +143,7 @@
                                 <span class="npc__bar-name">The Three Counties Irish Pub</span>
                             </div>
                             <div class="small-12 medium-6 columns">
-                                <span class="npc__bar-timeslot">approximate time: 6:30 PM - 8:00 PM</span>
+                                <span class="npc__bar-timeslot">approximate time: 6:30 PM - 10:00 PM</span>
                             </div>
                         </div>
                         <div class="row npc__bar-info">
@@ -164,10 +162,10 @@
                     <div class="npc__bar">
                         <div class="row npc__bar-header">
                             <div class="small-12 medium-6 columns">
-                                <span class="npc__bar-name">Gladstone Lounge &amp; Liquors</span>
+                                <span class="npc__bar-name">Gladstone Lounge &amp; Liquors (optional)</span>
                             </div>
                             <div class="small-12 medium-6 columns">
-                                <span class="npc__bar-timeslot">approximate time: 8:10 PM - 8:55 PM</span>
+                                <span class="npc__bar-timeslot">approximate time: 10:15 PM - 11:00 PM</span>
                             </div>
                         </div>
                         <div class="row npc__bar-info">
@@ -178,51 +176,7 @@
                             </div>
                             <div class="small-3 columns npc__img-sidebar">
                                 <div class="npc__bar-image">
-                                    <img src="/assets/img/bars/gladstone.jpg" title="Gladstone Lounge &amp; Liquors" alt="Gladstone Lounge &amp; Liquors" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="npc__bar">
-                        <div class="row npc__bar-header">
-                            <div class="small-12 medium-6 columns">
-                                <span class="npc__bar-name">The Thatch Pub</span>
-                            </div>
-                            <div class="small-12 medium-6 columns">
-                                <span class="npc__bar-timeslot">approximate time: 9:00 PM - 11:45 PM</span>
-                            </div>
-                        </div>
-                        <div class="row npc__bar-info">
-                            <div class="small-9 columns">
-                                <div class="npc__bar-description">
-                                    <p>The Thatch gives Three Counties a run for its money when it comes to the black stuff. I'd suggest a pint to start things off. They upped their game in 2015 by hosting our legendary dance party and Chalice presentation. Things went off without a hitch and the change of location was met with rave reviews. Bring your A game and attmept to answer Captain Fun's prayers. He'll take you there.</p><p><span class="activities">Activities</span>: dancing, Guinness, lasers, Chalice presentation</p>
-                                </div>
-                            </div>
-                            <div class="small-3 columns npc__img-sidebar">
-                                <div class="npc__bar-image">
-                                    <img src="/assets/img/bars/thatch.jpg" title="The Thatch Pub" alt="The Thatch Pub" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="npc__bar">
-                        <div class="row npc__bar-header">
-                            <div class="small-12 medium-6 columns">
-                                <span class="npc__bar-name">Vaughan’s Pub &amp; Grill</span>
-                            </div>
-                            <div class="small-12 medium-6 columns">
-                                <span class="npc__bar-timeslot">approximate time: 12:00 AM - ?</span>
-                            </div>
-                        </div>
-                        <div class="row npc__bar-info">
-                            <div class="small-9 columns">
-                                <div class="npc__bar-description">
-                                    <p>Vaughan's Pub &amp; Grill rounds out our crawl and kindly serves as our final destination. This is where it all began, folks.  The namesake of our coveted Chalice, Vaughan's hosted our legendary dance party in their luxurious upstairs party suite for many many years. Make sure you ask around for the owner, Anne, and thank her at every turn for being awesome.</p><p><span class="activities">Activities</span>: Guinness, jukebox, DJs, booths, craic, goodbyes</p>
-                                </div>
-                            </div>
-                            <div class="small-3 columns npc__img-sidebar">
-                                <div class="npc__bar-image">
-                                    <img src="/assets/img/bars/vaughans.jpg" title="Vaughan’s Pub &amp; Grill" alt="Vaughan’s Pub &amp; Grill" />
+                                    <img src="/assets/img/bars/gladstone.jpg" title="Gladstone Lounge &amp; Liquors (optional)" alt="Gladstone Lounge &amp; Liquors (optional)" />
                                 </div>
                             </div>
                         </div>
