--- a/whospounding.html
+++ b/whospounding.html
@@ -26,8 +26,8 @@
                 </div>
                 <div class="small-12 medium-6 columns">
                     <div class="npc__eventInfo">
-                        <span class="npc__annual">15th Annual Neighborhood Pub Crawl</span>
-                        <span class="npc__eventDate">August 12th, 2017</span>
+                        <span class="npc__annual">16th Annual Neighborhood Pub Crawl</span>
+                        <span class="npc__eventDate">August 25th, 2018</span>
                     </div>
                 </div>
             </div>
@@ -42,114 +42,19 @@
                             <!--<li class="npc__askCheesy "><a href="/askcheesy.html">Ask Cheesy</a>
                                 <div class="npc__cheesySurprise"></div>
                             </li>
-                            <li ><a href="/gallery.html">Gallery</a></li>-->
-                        </ul>
+                            <li ><a href="/gallery.html">Gallery</a></li>-->                </ul>
                     </nav>
                 </div>
             </div>
         </header>
-        
         <div class="row">
-
             <div class="small-12 columns">
                 <h3>Registered Crawlers</h3>
                 <ol>
                     <li>Matt Schragal</li>
                     <li>Lucy Raymond</li>
                     <li>Billy Gavin</li>
-                    <li>Tim Redmond</li>
-                    <li>Angie Kang</li>
-                    <li>Tony Maguire</li>
-                    <li>Joy Kolb</li>
-                    <li>Alex Hayashi</li>
-                    <li>Katie Wolf</li>
-                    <li>Molly Warner</li>
-                    <li>Tim Gavin</li>
-                    <li>Jason Mielcarek</li>
-                    <li>Amanda Pantle</li>
-                    <li>Amanda Pantle Guest</li>
-                    <li>Daniel Mercadante</li>
-                    <li>Andi Lenahan</li>
-                    <li>Mihai Sturdza</li>
-                    <li>Ali Fleming</li>
-                    <li>Natalie Mazza</li>
-                    <li>Natalie Mazza Guest</li>
-                    <li>Natalie Mazza Guest</li>
-                    <li>Natalie Mazza Guest</li>
-                    <li>Kevin Coyne</li>
-                    <li>Dan Klimas</li>
-                    <li>Kristin Klimas</li>
-                    <li>Aaron Kohlhepp</li>
-                    <li>Dave Weber</li>
-                    <li>Ryan Walsh</li>
-                    <li>Stacie Grodek</li>
-                    <li>Tim Grodek</li>
-                    <li>Denis Walsh</li>
-                    <li>Colin Monnier</li>
-                    <li>Daniel Moran</li>
-                    <li>Jacob Nelson</li>
-                    <li>Maggie Ritter</li>
-                    <li>Beth Wethole</li>
-                    <li>Brett Nosehair</li>
-                    <li>Brett Nosehair Guest</li>
-                    <li>Michael Johnson (The Mayor)</li>
-                    <li>Kristy Johnson (The Mayor's Wife)</li>
-                    <li>John White</li>
-                    <li>John White Guest</li>
-                    <li>Gina Scarpetta</li>
-                    <li>Fiona Lowry</li>
-                    <li>Stephen Hogan</li>
-                    <li>Melissa Gillham</li>
-                    <li>Brian Gillham</li>
-                    <li>Carrie North</li>
-                    <li>Matthew Salciccioli</li>
-                    <li>Alexandra Ochsner</li>
-                    <li>Pat Cavanaugh</li>
-                    <li>Jill O'Malley</li>
-                    <li>Claire Moore</li>
-                    <li>William Taege</li>
-                    <li>Brenda Beben</li>
-                    <li>Christine Mulroney</li>
-                    <li>Brian DiDuca</li>
-                    <li>Adam Metzger</li>
-                    <li>Brianna Bogan</li>
-                    <li>Brianna Bogan Guest</li>
-                    <li>Stephanie Nimmo</li>
-                    <li>Bob Nimmo</li>
-                    <li>Alex Moser</li>
-                    <li>Rachel Burke</li>
-                    <li>Billy Fletcher</li>
-                    <li>Kert Evans</li>
-                    <li>Kert Evans Guest</li>
-                    <li>Matt McDonad</li>
-                    <li>Falshunnee Bradford</li>
-                    <li>Steve DiDuca</li>
-                    <li>Lisa DiDuca</li>
-                    <li>Kris Kuznicki</li>
-                    <li>Patrick Palmieri</li>
-                    <li>Morgan Riegert</li>
-                    <li>John White</li>
-                    <li>Jim Murphy</li>
-                    <li>Eddie Diazmunoz</li>
-                    <li>Dan Bacarella</li>
-                    <li>Jason Gillham</li>
-                    <li>Amarelis Morales</li>
-                    <li>Stephanie Florey</li>
-                    <li>Katelyn Theis</li>
-                    <li>Matthew Taege</li>
-                    <li>Sanjay Gidwani</li>
-                    <li>Raymond Clark</li>
-                    <li>Drew Cekowski</li>
-                    <li>Nat Winters</li>
-                    <li>Jessie Chapman</li>
-                    <li>Kimberly Bugos</li>
-                    <li>Ryan Martin</li>
-                    <li>Nick Staton</li>
-                    <li>Ben Pfister</li>
-                    <li>Natalie Madsen</li>
-                    <li>Matthew Cavanaugh</li>
-                    <li>Dave Hess</li>
-                    <li>Joe Kelly</li>
+        
                 </ol>
             </div>
         </div>
