--- a/history.html
+++ b/history.html
@@ -26,8 +26,8 @@
                 </div>
                 <div class="small-12 medium-6 columns">
                     <div class="npc__eventInfo">
-                        <span class="npc__annual">15th Annual Neighborhood Pub Crawl</span>
-                        <span class="npc__eventDate">August 12th, 2017</span>
+                        <span class="npc__annual">16th Annual Neighborhood Pub Crawl</span>
+                        <span class="npc__eventDate">August 25th, 2018</span>
                     </div>
                 </div>
             </div>
@@ -42,13 +42,11 @@
                             <!--<li class="npc__askCheesy "><a href="/askcheesy.html">Ask Cheesy</a>
                                 <div class="npc__cheesySurprise"></div>
                             </li>
-                            <li ><a href="/gallery.html">Gallery</a></li>-->
-                        </ul>
+                            <li ><a href="/gallery.html">Gallery</a></li>-->                </ul>
                     </nav>
                 </div>
             </div>
         </header>
-        
         <div class="row">
             <div class="small-9 columns">
                 <h3>Pub Crawl History</h3>
@@ -56,7 +54,7 @@
                 <p>The Neighborhood Pub Crawl features two zip codes of one of a kind destinations. We've got limited edition custom t-shirts, gaming, food, a house band, raffles, romance, marriages, babies, a dancy party, Captain Fun, the Chalice of Valor...you get the point.</p>
                 <p>The core mission of our journey is brigning good people together into the historic melting pot that is Milwaukee Avenue and Chicago's Northwest side. We honor this legendary artery with our pilmigrage every August.</p>
                 <p>Our quest offers a chance for friends old and new to unwind, connect, share a Żywiec, and re-discover why they actually became friends in the first place.</p>
-                <p>Come one, come all. Invite your friends, invite your friend's friends - invite a total stranger. All are welcome. The people are what make this event great. We look forward to seeing who comes out every year.</p>
+                <p>The Neighborhood is always evolving as is our format. Come one, come all. Invite your friends, invite your friend's friends - invite a total stranger. All are welcome. The people are what make this event great. We look forward to seeing who comes out every year.</p>
                 <p>Thank you,
                     <br /> The Founding Fathers</p>
             </div>
