--- a/whospounding.html
+++ b/whospounding.html
@@ -54,7 +54,7 @@
                     <li>Matt Schragal</li>
                     <li>Lucy Raymond</li>
                     <li>Billy Gavin</li>
-        
+                    <li>Matt Artz</li>
                 </ol>
             </div>
         </div>
