--- a/whospounding.html
+++ b/whospounding.html
@@ -56,6 +56,8 @@
                     <li>Billy Gavin</li>
                     <li>Matt Artz</li>
                     <li>Tim Redmond</li>
+                    <li>Kristy Myers</li>
+                    <li>Kristy Myers Guest</li>
                 </ol>
             </div>
         </div>
