--- a/whospounding.html
+++ b/whospounding.html
@@ -58,6 +58,7 @@
                     <li>Tim Redmond</li>
                     <li>Kristy Myers</li>
                     <li>Kristy Myers Guest</li>
+                    <li>Craig Fitzgerald</li>
                 </ol>
             </div>
         </div>
