--- a/whospounding.html
+++ b/whospounding.html
@@ -56,8 +56,8 @@
                     <li>Billy Gavin</li>
                     <li>Matt Artz</li>
                     <li>Tim Redmond</li>
-                    <li>Kristy Myers</li>
-                    <li>Kristy Myers Guest</li>
+                    <li>Kristy Johnson</li>
+                    <li>Michael Johnson</li>
                     <li>Craig Fitzgerald</li>
                 </ol>
             </div>
