--- a/whospounding.html
+++ b/whospounding.html
@@ -59,6 +59,9 @@
                     <li>Kristy Johnson</li>
                     <li>Michael Johnson</li>
                     <li>Craig Fitzgerald</li>
+                    <li>Aaron Kohlhepp</li>
+                    <li>Molly Warner</li>
+                    <li>Tim Gavin</li>
                 </ol>
             </div>
         </div>
