--- a/whospounding.html
+++ b/whospounding.html
@@ -62,6 +62,7 @@
                     <li>Aaron Kohlhepp</li>
                     <li>Molly Warner</li>
                     <li>Tim Gavin</li>
+                    <li>Carrie North</li>
                 </ol>
             </div>
         </div>
