--- a/whospounding.html
+++ b/whospounding.html
@@ -63,6 +63,7 @@
                     <li>Molly Warner</li>
                     <li>Tim Gavin</li>
                     <li>Carrie North</li>
+                    <li>Noah Staton</li>                 
                 </ol>
             </div>
         </div>
