--- a/whospounding.html
+++ b/whospounding.html
@@ -63,7 +63,9 @@
                     <li>Molly Warner</li>
                     <li>Tim Gavin</li>
                     <li>Carrie North</li>
-                    <li>Noah Staton</li>                 
+                    <li>Noah Staton</li>
+                    <li>Tony Maguire</li>
+                    <li>Joy Kolb</li>
                 </ol>
             </div>
         </div>
