--- a/whospounding.html
+++ b/whospounding.html
@@ -66,6 +66,7 @@
                     <li>Noah Staton</li>
                     <li>Tony Maguire</li>
                     <li>Joy Kolb</li>
+                    <li>Devin Stubbs</li>
                 </ol>
             </div>
         </div>
