--- a/whospounding.html
+++ b/whospounding.html
@@ -67,6 +67,9 @@
                     <li>Tony Maguire</li>
                     <li>Joy Kolb</li>
                     <li>Devin Stubbs</li>
+                    <li>Ben Pfister</li>
+                    <li>Joy Rinehart</li>
+                    <li>Aaron Rinehart</li>
                 </ol>
             </div>
         </div>
