--- a/whospounding.html
+++ b/whospounding.html
@@ -70,10 +70,13 @@
                     <li>Ben Pfister</li>
                     <li>Joy Rinehart</li>
                     <li>Aaron Rinehart</li>
+                    <li>Amanda Pantle</li>
+                    <li>Amanda Pantle Guest</li>
+                    <li>Adria Stapleton</li>
+                    <li>Adria Stapleton Guest</li>
                 </ol>
             </div>
         </div>
-        
     </div>
     <script src="assets/js/app.js"></script>
   </body>
