--- a/whospounding.html
+++ b/whospounding.html
@@ -74,6 +74,8 @@
                     <li>Amanda Pantle Guest</li>
                     <li>Adria Stapleton</li>
                     <li>Adria Stapleton Guest</li>
+                    <li>Tara Gavin</li>
+                    <li>Jason Mielcarek</li>
                 </ol>
             </div>
         </div>
