--- a/whospounding.html
+++ b/whospounding.html
@@ -76,6 +76,11 @@
                     <li>Adria Stapleton Guest</li>
                     <li>Tara Gavin</li>
                     <li>Jason Mielcarek</li>
+                    <li>Jacob Nelson</li>
+                    <li>Alexandra Ochsner</li>
+                    <li>Dave Crites</li>
+                    <li>Stephanie Florey</li>
+                    <li>Stephanie Florey Guest</li>
                 </ol>
             </div>
         </div>
