--- a/whospounding.html
+++ b/whospounding.html
@@ -78,7 +78,7 @@
                     <li>Jason Mielcarek</li>
                     <li>Jacob Nelson</li>
                     <li>Alexandra Ochsner</li>
-                    <li>Dave Crites</li>
+                    <li>Dave &quot;Pudding Time&quot; Crites</li>
                     <li>Stephanie Florey</li>
                     <li>Stephanie Florey Guest</li>
                 </ol>
