--- a/whospounding.html
+++ b/whospounding.html
@@ -81,6 +81,8 @@
                     <li>Dave &quot;Pudding Time&quot; Crites</li>
                     <li>Stephanie Florey</li>
                     <li>Stephanie Florey Guest</li>
+                    <li>Dave Weber</li>
+                    <li>Fiona Lowry</li>
                 </ol>
             </div>
         </div>
