--- a/whospounding.html
+++ b/whospounding.html
@@ -83,6 +83,7 @@
                     <li>Stephanie Florey Guest</li>
                     <li>Dave Weber</li>
                     <li>Fiona Lowry</li>
+                    <li>Brian DiDuca</li>
                 </ol>
             </div>
         </div>
