--- a/whospounding.html
+++ b/whospounding.html
@@ -84,6 +84,10 @@
                     <li>Dave Weber</li>
                     <li>Fiona Lowry</li>
                     <li>Brian DiDuca</li>
+                    <li>Tara Phouthavongsa</li>
+                    <li>Patrick Palmieri</li>
+                    <li>Kert Evans</li>
+                    <li>Kert Evans Guest</li>
                 </ol>
             </div>
         </div>
