--- a/whospounding.html
+++ b/whospounding.html
@@ -88,6 +88,13 @@
                     <li>Patrick Palmieri</li>
                     <li>Kert Evans</li>
                     <li>Kert Evans Guest</li>
+                    <li>Beth Wenzl</li>
+                    <li>Dan Klimas</li>
+                    <li>Kristin Klimas</li>
+                    <li>Stacey Grodek</li>
+                    <li>Tim Grodek</li>
+                    <li>Denis Walsh</li>
+                    <li>Luciano Agrusa</li>
                 </ol>
             </div>
         </div>
