--- a/whospounding.html
+++ b/whospounding.html
@@ -42,7 +42,8 @@
                             <!--<li class="npc__askCheesy "><a href="/askcheesy.html">Ask Cheesy</a>
                                 <div class="npc__cheesySurprise"></div>
                             </li>
-                            <li ><a href="/gallery.html">Gallery</a></li>-->                </ul>
+                            <li ><a href="/gallery.html">Gallery</a></li>-->
+                        </ul>
                     </nav>
                 </div>
             </div>
@@ -95,6 +96,8 @@
                     <li>Tim Grodek</li>
                     <li>Denis Walsh</li>
                     <li>Luciano Agrusa</li>
+                    <li>Vincent Daddona</li>
+                    <li>Jason Gillham</li>
                 </ol>
             </div>
         </div>
